crates/but-api-macros/tests/tests/ui/fail/tauri_reexport_conflict.stderr
error[E0255]: the name `__cmd__ping_json` is defined multiple times
  --> tests/ui/fail/tauri_reexport_conflict.rs:10:8
   |
 9 | #[but_api]
   | ---------- previous definition of the macro `__cmd__ping_json` here
10 | pub fn ping(name: String) -> anyhow::Result<String> {
   |        ^^^^ `__cmd__ping_json` reimported here
   |
   = note: `__cmd__ping_json` must be defined only once in the macro namespace of this module

error: macro-expanded `macro_export` macros from the current crate cannot be referred to by absolute paths
 --> tests/ui/fail/tauri_reexport_conflict.rs:9:1
  |
9 | #[but_api]
  | ^^^^^^^^^^
  |
  = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
  = note: for more information, see issue #52234 <https://github.com/rust-lang/rust/issues/52234>
note: the macro is defined here
 --> tests/ui/fail/tauri_reexport_conflict.rs:9:1
  |
9 | #[but_api]
  | ^^^^^^^^^^
  = note: `#[deny(macro_expanded_macro_exports_accessed_by_absolute_paths)]` (part of `#[deny(future_incompatible)]`) on by default
  = note: this error originates in the attribute macro `but_api` which comes from the expansion of the attribute macro `tauri::command` (in Nightly builds, run with -Z macro-backtrace for more info)
